--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".HomePage"
             android:exported="false"
             android:label="@string/app_name"
             android:theme="@style/Theme.WeatherApp" >
